grammars/ExpressionParser.py
# Generated from grammars/ExpressionParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ExpressionParser ( Parser ):

    grammarFileName = "ExpressionParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'.'", "','", "';'", "'('", "')'" ]

    symbolicNames = [ "<INVALID>", "SELECT", "FROM", "WHERE", "INSERT", 
                      "INTO", "UPDATE", "DELETE", "CREATE", "ALTER", "TABLE", 
                      "DROP", "ADD", "VALUES", "SET", "JOIN", "INNER", "LEFT", 
                      "RIGHT", "FULL", "OUTER", "ON", "AND", "OR", "NOT", 
                      "EXISTS", "IF", "BEGIN", "END", "TRY", "CATCH", "DECLARE", 
                      "EXEC", "GO", "CASE", "WHEN", "THEN", "ELSE", "NULL", 
                      "IN", "IS", "LIKE", "BETWEEN", "ORDER", "BY", "GROUP", 
                      "HAVING", "ASC", "DESC", "AS", "MAX", "AVG", "TRUNCATE", 
                      "PRIMARY", "KEY", "CONSTRAINT", "COLUMN", "INT", "NVARCHAR", 
                      "BIGINT", "DATE", "DOT", "COMMA", "SEMI", "LPAREN", 
                      "RPAREN", "SP_EXECUTESQL", "CLUSTERED", "NONCLUSTERED", 
                      "LINE_COMMENT", "BLOCK_COMMENT", "WS", "STRING_SINGLE", 
                      "STRING_DOUBLE", "BRACKET_IDENTIFIER", "VARIABLE", 
                      "IDENTIFIER", "NUMBER", "OPERATOR" ]

    RULE_expression = 0
    RULE_primary = 1
    RULE_binaryOp = 2
    RULE_expressionList = 3
    RULE_literal = 4
    RULE_identifier = 5
    RULE_keywordAsIdentifier = 6
    RULE_functionCall = 7
    RULE_caseExpression = 8
    RULE_whenClause = 9
    RULE_elseClause = 10
    RULE_condition = 11
    RULE_tableName = 12
    RULE_columnName = 13
    RULE_selectStatement = 14

    ruleNames =  [ "expression", "primary", "binaryOp", "expressionList", 
                   "literal", "identifier", "keywordAsIdentifier", "functionCall", 
                   "caseExpression", "whenClause", "elseClause", "condition", 
                   "tableName", "columnName", "selectStatement" ]

    EOF = Token.EOF
    SELECT=1
    FROM=2
    WHERE=3
    INSERT=4
    INTO=5
    UPDATE=6
    DELETE=7
    CREATE=8
    ALTER=9
    TABLE=10
    DROP=11
    ADD=12
    VALUES=13
    SET=14
    JOIN=15
    INNER=16
    LEFT=17
    RIGHT=18
    FULL=19
    OUTER=20
    ON=21
    AND=22
    OR=23
    NOT=24
    EXISTS=25
    IF=26
    BEGIN=27
    END=28
    TRY=29
    CATCH=30
    DECLARE=31
    EXEC=32
    GO=33
    CASE=34
    WHEN=35
    THEN=36
    ELSE=37
    NULL=38
    IN=39
    IS=40
    LIKE=41
    BETWEEN=42
    ORDER=43
    BY=44
    GROUP=45
    HAVING=46
    ASC=47
    DESC=48
    AS=49
    MAX=50
    AVG=51
    TRUNCATE=52
    PRIMARY=53
    KEY=54
    CONSTRAINT=55
    COLUMN=56
    INT=57
    NVARCHAR=58
    BIGINT=59
    DATE=60
    DOT=61
    COMMA=62
    SEMI=63
    LPAREN=64
    RPAREN=65
    SP_EXECUTESQL=66
    CLUSTERED=67
    NONCLUSTERED=68
    LINE_COMMENT=69
    BLOCK_COMMENT=70
    WS=71
    STRING_SINGLE=72
    STRING_DOUBLE=73
    BRACKET_IDENTIFIER=74
    VARIABLE=75
    IDENTIFIER=76
    NUMBER=77
    OPERATOR=78

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primary(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExpressionParser.PrimaryContext)
            else:
                return self.getTypedRuleContext(ExpressionParser.PrimaryContext,i)


        def binaryOp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExpressionParser.BinaryOpContext)
            else:
                return self.getTypedRuleContext(ExpressionParser.BinaryOpContext,i)


        def getRuleIndex(self):
            return ExpressionParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression" ):
                return visitor.visitExpression(self)
            else:
                return visitor.visitChildren(self)




    def expression(self):

        localctx = ExpressionParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_expression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 30
            self.primary()
            self.state = 36
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((((_la - 22)) & ~0x3f) == 0 and ((1 << (_la - 22)) & 72057594039894023) != 0):
                self.state = 31
                self.binaryOp()
                self.state = 32
                self.primary()
                self.state = 38
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrimaryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def literal(self):
            return self.getTypedRuleContext(ExpressionParser.LiteralContext,0)


        def functionCall(self):
            return self.getTypedRuleContext(ExpressionParser.FunctionCallContext,0)


        def caseExpression(self):
            return self.getTypedRuleContext(ExpressionParser.CaseExpressionContext,0)


        def identifier(self):
            return self.getTypedRuleContext(ExpressionParser.IdentifierContext,0)


        def VARIABLE(self):
            return self.getToken(ExpressionParser.VARIABLE, 0)

        def LPAREN(self):
            return self.getToken(ExpressionParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(ExpressionParser.RPAREN, 0)

        def selectStatement(self):
            return self.getTypedRuleContext(ExpressionParser.SelectStatementContext,0)


        def expression(self):
            return self.getTypedRuleContext(ExpressionParser.ExpressionContext,0)


        def expressionList(self):
            return self.getTypedRuleContext(ExpressionParser.ExpressionListContext,0)


        def OPERATOR(self):
            return self.getToken(ExpressionParser.OPERATOR, 0)

        def primary(self):
            return self.getTypedRuleContext(ExpressionParser.PrimaryContext,0)


        def getRuleIndex(self):
            return ExpressionParser.RULE_primary

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrimary" ):
                listener.enterPrimary(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrimary" ):
                listener.exitPrimary(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrimary" ):
                return visitor.visitPrimary(self)
            else:
                return visitor.visitChildren(self)




    def primary(self):

        localctx = ExpressionParser.PrimaryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_primary)
        try:
            self.state = 54
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 39
                self.literal()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 40
                self.functionCall()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 41
                self.caseExpression()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 42
                self.identifier()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 43
                self.match(ExpressionParser.VARIABLE)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 44
                self.match(ExpressionParser.LPAREN)
                self.state = 48
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
                if la_ == 1:
                    self.state = 45
                    self.selectStatement()
                    pass

                elif la_ == 2:
                    self.state = 46
                    self.expression()
                    pass

                elif la_ == 3:
                    self.state = 47
                    self.expressionList()
                    pass


                self.state = 50
                self.match(ExpressionParser.RPAREN)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 52
                self.match(ExpressionParser.OPERATOR)
                self.state = 53
                self.primary()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BinaryOpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OPERATOR(self):
            return self.getToken(ExpressionParser.OPERATOR, 0)

        def AND(self):
            return self.getToken(ExpressionParser.AND, 0)

        def OR(self):
            return self.getToken(ExpressionParser.OR, 0)

        def IN(self):
            return self.getToken(ExpressionParser.IN, 0)

        def IS(self):
            return self.getToken(ExpressionParser.IS, 0)

        def NOT(self):
            return self.getToken(ExpressionParser.NOT, 0)

        def LIKE(self):
            return self.getToken(ExpressionParser.LIKE, 0)

        def BETWEEN(self):
            return self.getToken(ExpressionParser.BETWEEN, 0)

        def getRuleIndex(self):
            return ExpressionParser.RULE_binaryOp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBinaryOp" ):
                listener.enterBinaryOp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBinaryOp" ):
                listener.exitBinaryOp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBinaryOp" ):
                return visitor.visitBinaryOp(self)
            else:
                return visitor.visitChildren(self)




    def binaryOp(self):

        localctx = ExpressionParser.BinaryOpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_binaryOp)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            _la = self._input.LA(1)
            if not(((((_la - 22)) & ~0x3f) == 0 and ((1 << (_la - 22)) & 72057594039894023) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExpressionParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(ExpressionParser.ExpressionContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(ExpressionParser.COMMA)
            else:
                return self.getToken(ExpressionParser.COMMA, i)

        def getRuleIndex(self):
            return ExpressionParser.RULE_expressionList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpressionList" ):
                listener.enterExpressionList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpressionList" ):
                listener.exitExpressionList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpressionList" ):
                return visitor.visitExpressionList(self)
            else:
                return visitor.visitChildren(self)




    def expressionList(self):

        localctx = ExpressionParser.ExpressionListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_expressionList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self.expression()
            self.state = 63
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==62:
                self.state = 59
                self.match(ExpressionParser.COMMA)
                self.state = 60
                self.expression()
                self.state = 65
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LiteralContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self):
            return self.getToken(ExpressionParser.NUMBER, 0)

        def STRING_SINGLE(self):
            return self.getToken(ExpressionParser.STRING_SINGLE, 0)

        def STRING_DOUBLE(self):
            return self.getToken(ExpressionParser.STRING_DOUBLE, 0)

        def NULL(self):
            return self.getToken(ExpressionParser.NULL, 0)

        def getRuleIndex(self):
            return ExpressionParser.RULE_literal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLiteral" ):
                listener.enterLiteral(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLiteral" ):
                listener.exitLiteral(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLiteral" ):
                return visitor.visitLiteral(self)
            else:
                return visitor.visitChildren(self)




    def literal(self):

        localctx = ExpressionParser.LiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_literal)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            _la = self._input.LA(1)
            if not(((((_la - 38)) & ~0x3f) == 0 and ((1 << (_la - 38)) & 601295421441) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdentifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(ExpressionParser.IDENTIFIER, 0)

        def BRACKET_IDENTIFIER(self):
            return self.getToken(ExpressionParser.BRACKET_IDENTIFIER, 0)

        def keywordAsIdentifier(self):
            return self.getTypedRuleContext(ExpressionParser.KeywordAsIdentifierContext,0)


        def getRuleIndex(self):
            return ExpressionParser.RULE_identifier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdentifier" ):
                listener.enterIdentifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdentifier" ):
                listener.exitIdentifier(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdentifier" ):
                return visitor.visitIdentifier(self)
            else:
                return visitor.visitChildren(self)




    def identifier(self):

        localctx = ExpressionParser.IdentifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_identifier)
        try:
            self.state = 71
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [76]:
                self.enterOuterAlt(localctx, 1)
                self.state = 68
                self.match(ExpressionParser.IDENTIFIER)
                pass
            elif token in [74]:
                self.enterOuterAlt(localctx, 2)
                self.state = 69
                self.match(ExpressionParser.BRACKET_IDENTIFIER)
                pass
            elif token in [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 29, 30, 31, 32, 33, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 67, 68]:
                self.enterOuterAlt(localctx, 3)
                self.state = 70
                self.keywordAsIdentifier()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class KeywordAsIdentifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SELECT(self):
            return self.getToken(ExpressionParser.SELECT, 0)

        def FROM(self):
            return self.getToken(ExpressionParser.FROM, 0)

        def WHERE(self):
            return self.getToken(ExpressionParser.WHERE, 0)

        def INSERT(self):
            return self.getToken(ExpressionParser.INSERT, 0)

        def INTO(self):
            return self.getToken(ExpressionParser.INTO, 0)

        def UPDATE(self):
            return self.getToken(ExpressionParser.UPDATE, 0)

        def DELETE(self):
            return self.getToken(ExpressionParser.DELETE, 0)

        def CREATE(self):
            return self.getToken(ExpressionParser.CREATE, 0)

        def ALTER(self):
            return self.getToken(ExpressionParser.ALTER, 0)

        def TABLE(self):
            return self.getToken(ExpressionParser.TABLE, 0)

        def DROP(self):
            return self.getToken(ExpressionParser.DROP, 0)

        def ADD(self):
            return self.getToken(ExpressionParser.ADD, 0)

        def VALUES(self):
            return self.getToken(ExpressionParser.VALUES, 0)

        def SET(self):
            return self.getToken(ExpressionParser.SET, 0)

        def JOIN(self):
            return self.getToken(ExpressionParser.JOIN, 0)

        def INNER(self):
            return self.getToken(ExpressionParser.INNER, 0)

        def LEFT(self):
            return self.getToken(ExpressionParser.LEFT, 0)

        def RIGHT(self):
            return self.getToken(ExpressionParser.RIGHT, 0)

        def FULL(self):
            return self.getToken(ExpressionParser.FULL, 0)

        def OUTER(self):
            return self.getToken(ExpressionParser.OUTER, 0)

        def ON(self):
            return self.getToken(ExpressionParser.ON, 0)

        def AND(self):
            return self.getToken(ExpressionParser.AND, 0)

        def OR(self):
            return self.getToken(ExpressionParser.OR, 0)

        def NOT(self):
            return self.getToken(ExpressionParser.NOT, 0)

        def EXISTS(self):
            return self.getToken(ExpressionParser.EXISTS, 0)

        def IF(self):
            return self.getToken(ExpressionParser.IF, 0)

        def TRY(self):
            return self.getToken(ExpressionParser.TRY, 0)

        def CATCH(self):
            return self.getToken(ExpressionParser.CATCH, 0)

        def DECLARE(self):
            return self.getToken(ExpressionParser.DECLARE, 0)

        def EXEC(self):
            return self.getToken(ExpressionParser.EXEC, 0)

        def GO(self):
            return self.getToken(ExpressionParser.GO, 0)

        def NULL(self):
            return self.getToken(ExpressionParser.NULL, 0)

        def IN(self):
            return self.getToken(ExpressionParser.IN, 0)

        def IS(self):
            return self.getToken(ExpressionParser.IS, 0)

        def LIKE(self):
            return self.getToken(ExpressionParser.LIKE, 0)

        def BETWEEN(self):
            return self.getToken(ExpressionParser.BETWEEN, 0)

        def ORDER(self):
            return self.getToken(ExpressionParser.ORDER, 0)

        def BY(self):
            return self.getToken(ExpressionParser.BY, 0)

        def GROUP(self):
            return self.getToken(ExpressionParser.GROUP, 0)

        def HAVING(self):
            return self.getToken(ExpressionParser.HAVING, 0)

        def ASC(self):
            return self.getToken(ExpressionParser.ASC, 0)

        def DESC(self):
            return self.getToken(ExpressionParser.DESC, 0)

        def AS(self):
            return self.getToken(ExpressionParser.AS, 0)

        def INT(self):
            return self.getToken(ExpressionParser.INT, 0)

        def NVARCHAR(self):
            return self.getToken(ExpressionParser.NVARCHAR, 0)

        def BIGINT(self):
            return self.getToken(ExpressionParser.BIGINT, 0)

        def DATE(self):
            return self.getToken(ExpressionParser.DATE, 0)

        def MAX(self):
            return self.getToken(ExpressionParser.MAX, 0)

        def AVG(self):
            return self.getToken(ExpressionParser.AVG, 0)

        def TRUNCATE(self):
            return self.getToken(ExpressionParser.TRUNCATE, 0)

        def PRIMARY(self):
            return self.getToken(ExpressionParser.PRIMARY, 0)

        def KEY(self):
            return self.getToken(ExpressionParser.KEY, 0)

        def CONSTRAINT(self):
            return self.getToken(ExpressionParser.CONSTRAINT, 0)

        def COLUMN(self):
            return self.getToken(ExpressionParser.COLUMN, 0)

        def CLUSTERED(self):
            return self.getToken(ExpressionParser.CLUSTERED, 0)

        def NONCLUSTERED(self):
            return self.getToken(ExpressionParser.NONCLUSTERED, 0)

        def getRuleIndex(self):
            return ExpressionParser.RULE_keywordAsIdentifier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterKeywordAsIdentifier" ):
                listener.enterKeywordAsIdentifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitKeywordAsIdentifier" ):
                listener.exitKeywordAsIdentifier(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitKeywordAsIdentifier" ):
                return visitor.visitKeywordAsIdentifier(self)
            else:
                return visitor.visitChildren(self)




    def keywordAsIdentifier(self):

        localctx = ExpressionParser.KeywordAsIdentifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_keywordAsIdentifier)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 2305842751113003006) != 0) or _la==67 or _la==68):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionCallContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPAREN(self):
            return self.getToken(ExpressionParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(ExpressionParser.RPAREN, 0)

        def MAX(self):
            return self.getToken(ExpressionParser.MAX, 0)

        def AVG(self):
            return self.getToken(ExpressionParser.AVG, 0)

        def identifier(self):
            return self.getTypedRuleContext(ExpressionParser.IdentifierContext,0)


        def expressionList(self):
            return self.getTypedRuleContext(ExpressionParser.ExpressionListContext,0)


        def getRuleIndex(self):
            return ExpressionParser.RULE_functionCall

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionCall" ):
                listener.enterFunctionCall(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionCall" ):
                listener.exitFunctionCall(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionCall" ):
                return visitor.visitFunctionCall(self)
            else:
                return visitor.visitChildren(self)




    def functionCall(self):

        localctx = ExpressionParser.FunctionCallContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_functionCall)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.state = 75
                self.match(ExpressionParser.MAX)
                pass

            elif la_ == 2:
                self.state = 76
                self.match(ExpressionParser.AVG)
                pass

            elif la_ == 3:
                self.state = 77
                self.identifier()
                pass


            self.state = 80
            self.match(ExpressionParser.LPAREN)
            self.state = 82
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 2305842768292872190) != 0) or ((((_la - 64)) & ~0x3f) == 0 and ((1 << (_la - 64)) & 32537) != 0):
                self.state = 81
                self.expressionList()

